--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "lucide-react": "^0.400.0",
     "next": "14.2.4",
     "node-appwrite": "^13.0.0",
+    "npm-git-install": "^0.3.0",
     "plaid": "^25.0.0",
     "query-string": "^9.0.0",
     "react": "^18",
